fix: adjust profile info on mobile devices

--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -2,6 +2,7 @@
 @import url("./_type/form__input_type_name.css");
 
 .form__input {
+  -webkit-appearance: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 13px;
   margin: 0 0 30px;
